  If the list is then still empty, display an item "Synchronize data base".
- change the compile option USE_BITMAP into a setup variant: New background
  mode "Bitmap". This is for those whose computers have problems with showing
  mpeg covers like "timeout waiting for LoadBitmap" in the FF card driver
- rename background mode to image mode which is more appropriate since the
  last changes. Since this also changes the name under which the value is
  stored in the setup file, you will lose your old value after updating.

2008-12-27 Version 0.2.2-BETA
- when showing covers as bitmaps, honour the image show duration from setup
- after changing into lyrics mode, the lyrics for the first song were not
  automatically loaded from the internet
- fix image modes TV and Black: They also showed the cover image
- add italian translation, contributed by Diego Pierotto
- fix off by one error when selecting tracks in play mode by using number keys,
found by Thomas Balke
- DisplayMode is now configurable, found by Thomas Balke. This defines between
how many different types of information the first line toggles in the player.
- README.mysql was incomplete
- Mysql only: Fix order of insertion into empty playlist. Found by Thomas
Balke.
- update README.* about MySQL with utf8
- importing subdirectories with mugglei: sorting by folder did not work for
  those tracks. Found by Thomas Balke.
- fix bug #32 reported by Anonymous: mugglei will not run from a linked subfolder
- when checking if we are in or under the top level dictory, no longer translate
  current path to realpath - always go through all symlinks. Fixes bug fix for
  bug #32, reported by Thomas. Hoping this does not break other configurations.
- when destroying the OSD object, save muggle state. Fixes bug #37 reported by
  Thomas
- updated translations by Ville Skyttä and Diego Pierotto

2009-XX-XX Version 0.2.3
- last version broke importing from setup menu